--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
-  "version": "0.1.0",
+  "version": "0.0.1",
+  "description": "React Frontend",
   "private": true,
   "dependencies": {
     "graphql": "^14.5.8",
@@ -29,5 +30,24 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "contributors": [
+    "Arminé Iradian <armirad@yahoo.ca>",
+    "Charles Chan <chanc09@gmail.com>",
+    "Hassan Karimian <karimian.hassan@gmail.com>",
+    "Line Ghanem <ghanemline@gmail.com>",
+    "Mikael Samvelian <mikael.samvelian@gmail.com>",
+    "Oumar Ba <oumarba221296@hotmail.fr>",
+    "Steffan Venacious <steffan_v@hotmail.com>",
+    "Tyler Delaportas <tdelaportas@hotmail.com>"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MikeSmvl/travelingstrategy.git"
+  },
+  "bugs": {
+    "url": "https://github.com/MikeSmvl/travelingstrategy/issues"
+  },
+  "homepage": "https://github.com/MikeSmvl/travelingstrategy#readme",
+  "license": "MIT"
 }
