--- a/server/package.json
+++ b/server/package.json
@@ -19,9 +19,9 @@
   },
   "homepage": "https://github.com/MikeSmvl/travelingstrategy#readme",
   "dependencies": {
-    "apollo": "^2.20.0",
-    "apollo-server": "^2.9.6",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
     "sqlite3": "^4.1.0"
   },
