feat: set up and configure Webpack and Babel #24

--- a/client/package.json
+++ b/client/package.json
@@ -6,13 +6,15 @@
   "dependencies": {
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
+    "less": "^3.10.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "webpack-dev-server --open --mode development",
+    "build": "webpack --mode=production",
+    "dev-server": "webpack-dev-server",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -49,5 +51,17 @@
     "url": "https://github.com/MikeSmvl/travelingstrategy/issues"
   },
   "homepage": "https://github.com/MikeSmvl/travelingstrategy#readme",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
+    "less-loader": "^5.0.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2"
+  }
 }
