--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -2,38 +2,7 @@
     "parser": "babel-eslint",
     "extends": ["airbnb"],
     "rules": {
-        "no-unused-expression": false,
-        "indent": [
-            true,
-            "spaces"
-        ],
-        "quotemark": [
-            true,
-            "single",
-            "jsx-double"
-        ],
-        "no-var-requires": false,
-        "ordered-imports": false,
-        "member-ordering": [
-            false
-        ],
-        "object-literal-sort-keys": false,
-        "no-shadowed-variable": false,
-        "no-console": [
-            false
-        ],
-        "jsx-alignment": [
-            false
-        ],
-        "jsx-no-multiline-js": false,
-        "jsx-no-lambda": false,
-        "interface-over-type-literal": false,
-        "no-empty": false,
-        "ban-types": false,
-        "variable-name": {
-            "options": [
-              "allow-pascal-case"
-            ]
-          }
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+        "react/jsx-one-expression-per-line": "off",
     }
 }
