--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,17 @@
     "less": "^3.10.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-bootstrap": "^1.0.0-beta.14",
+    "bootstrap": "^4.3.1"
   },
   "scripts": {
     "start": "webpack-dev-server --open --mode development",
     "build": "webpack --mode=production",
     "dev-server": "webpack-dev-server",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/App.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -67,6 +70,7 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "less-loader": "^5.0.0",
+    "react-hot-loader": "^4.12.15",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
