#5 updated yarn.lock file removed package-lock.json, decided to stick to yarn. Updated config.yml to use yarn as well

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,8 @@ jobs:
 
     steps:
       - checkout
-      - run: cd client && npm ci
-      - run: cd client && npm test
+      - run: cd client && yarn ci
+      - run: cd client && yarn test
 workflows:
   version: 2
   Build and Test:
