--- a/client/package.json
+++ b/client/package.json
@@ -81,8 +81,6 @@
     "less-loader": "^5.0.0",
     "react-hot-loader": "^4.12.15",
     "style-loader": "^1.0.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2"
+    "webpack-cli": "^3.3.9"
   }
 }
