--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/MikeSmvl/travelingstrategy#readme",
   "dependencies": {
+    "chai": "^4.2.0",
     "dotenv": "^8.2.0",
+    "easygraphql-tester": "^5.1.6",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
