--- a/client/package.json
+++ b/client/package.json
@@ -4,19 +4,19 @@
   "description": "React Frontend",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "less": "^3.10.3",
     "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0",
     "react-bootstrap": "^1.0.0-beta.14",
-    "bootstrap": "^4.3.1"
+    "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0"
   },
   "scripts": {
-    "start": "webpack-dev-server --open --mode development",
-    "build": "webpack --mode=production",
-    "dev-server": "webpack-dev-server",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/App.js",
@@ -57,9 +57,6 @@
   "homepage": "https://github.com/MikeSmvl/travelingstrategy#readme",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-react": "^7.6.3",
     "@storybook/addon-a11y": "^5.2.5",
     "@storybook/addon-actions": "^5.2.5",
     "@storybook/addon-backgrounds": "^5.2.5",
@@ -69,7 +66,6 @@
     "@storybook/addon-storyshots": "^5.2.5",
     "@storybook/react": "^5.2.5",
     "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
@@ -80,7 +76,6 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "less-loader": "^5.0.0",
     "react-hot-loader": "^4.12.15",
-    "style-loader": "^1.0.0",
-    "webpack-cli": "^3.3.9"
+    "style-loader": "^1.0.0"
   }
 }
