--- a/client/package.json
+++ b/client/package.json
@@ -1,19 +1,7 @@
 {
   "name": "client",
   "version": "0.0.1",
-  "description": "React Frontend",
   "private": true,
-  "dependencies": {
-    "bootstrap": "^4.3.1",
-    "graphql": "^14.5.8",
-    "graphql-tag": "^2.10.1",
-    "less": "^3.10.3",
-    "react": "^16.10.2",
-    "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.10.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -21,6 +9,34 @@
     "eject": "react-scripts eject",
     "lint": "eslint src/App.js",
     "storybook": "start-storybook -p 6006"
+  },
+  "dependencies": {
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-scripts": "3.2.0",
+    "@fullpage/react-fullpage": "^0.1.16",
+    "bootstrap": "^4.3.1",
+    "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
+    "less": "^3.10.3",
+    "react-bootstrap": "^1.0.0-beta.14",
+    "react-router-dom": "^5.1.2"
+  },
+  "devDependencies": {
+    "@storybook/addon-a11y": "^5.2.5",
+    "@storybook/addon-actions": "^5.2.5",
+    "@storybook/addon-backgrounds": "^5.2.5",
+    "@storybook/addon-info": "^5.2.5",
+    "@storybook/addon-knobs": "^5.2.5",
+    "@storybook/addon-links": "^5.2.5",
+    "@storybook/addon-storyshots": "^5.2.5",
+    "@storybook/react": "^5.2.5",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -54,28 +70,5 @@
   "bugs": {
     "url": "https://github.com/MikeSmvl/travelingstrategy/issues"
   },
-  "homepage": "https://github.com/MikeSmvl/travelingstrategy#readme",
-  "license": "MIT",
-  "devDependencies": {
-    "@storybook/addon-a11y": "^5.2.5",
-    "@storybook/addon-actions": "^5.2.5",
-    "@storybook/addon-backgrounds": "^5.2.5",
-    "@storybook/addon-info": "^5.2.5",
-    "@storybook/addon-knobs": "^5.2.5",
-    "@storybook/addon-links": "^5.2.5",
-    "@storybook/addon-storyshots": "^5.2.5",
-    "@storybook/react": "^5.2.5",
-    "babel-eslint": "^10.0.3",
-    "css-loader": "^3.2.0",
-    "eslint": "^6.1.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-loader": "^3.0.2",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "less-loader": "^5.0.0",
-    "react-hot-loader": "^4.12.15",
-    "style-loader": "^1.0.0"
-  }
+  "license": "MIT"
 }
