--- a/client/package.json
+++ b/client/package.json
@@ -8,19 +8,20 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/App.js",
-    "storybook": "start-storybook -p 6006"
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "dependencies": {
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0",
     "@fullpage/react-fullpage": "^0.1.16",
     "bootstrap": "^4.3.1",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "less": "^3.10.3",
+    "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
-    "react-router-dom": "^5.1.2"
+    "react-dom": "^16.11.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0"
   },
   "devDependencies": {
     "@storybook/addon-a11y": "^5.2.5",
@@ -30,6 +31,7 @@
     "@storybook/addon-knobs": "^5.2.5",
     "@storybook/addon-links": "^5.2.5",
     "@storybook/addon-storyshots": "^5.2.5",
+    "@storybook/addons": "^5.2.5",
     "@storybook/react": "^5.2.5",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
