--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -8,6 +8,12 @@
         "react/jsx-indent": "off",
         "indent": "off",
         "react/jsx-indent-props": [2, "tab"],
-        "comma-dangle": ["error", "never"]
+        "comma-dangle": ["error", "never"],
+        "arrow-body-style": "off",
+        "react/jsx-props-no-spreading": "off",
+        "no-unused-vars": "off",
+        "react/require-default-props": "off",
+        "import/no-unresolved": "off",
+        "object-curly-newline": "off"
     }
 }
