--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,8 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "semantic-ui-react": "^0.88.1"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
