--- a/client/package.json
+++ b/client/package.json
@@ -23,17 +23,25 @@
     "@storybook/addons": "^5.2.5",
     "@storybook/react": "^5.2.5",
     "@storybook/theming": "^5.2.5",
+    "@types/googlemaps": "^3.38.0",
     "bootstrap": "^4.3.1",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "less": "^3.10.3",
+    "material-ui": "^0.20.2",
+    "material-ui-search-bar": "^0.4.2",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
+    "react-geocode": "^0.1.2",
+    "react-google-autocomplete": "^1.1.0",
+    "react-google-maps": "^9.4.5",
+    "react-google-places-autocomplete": "^1.5.3",
+    "react-load-script": "^0.0.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "semantic-ui-react": "^0.88.1"
+    "semantic-ui-react": "latest"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
