--- a/client/package.json
+++ b/client/package.json
@@ -13,16 +13,6 @@
   },
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.16",
-    "@storybook/addon-a11y": "^5.2.5",
-    "@storybook/addon-actions": "^5.2.5",
-    "@storybook/addon-backgrounds": "^5.2.5",
-    "@storybook/addon-info": "^5.2.5",
-    "@storybook/addon-knobs": "^5.2.5",
-    "@storybook/addon-links": "^5.2.5",
-    "@storybook/addon-storyshots": "^5.2.5",
-    "@storybook/addons": "^5.2.5",
-    "@storybook/react": "^5.2.5",
-    "@storybook/theming": "^5.2.5",
     "bootstrap": "^4.3.1",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
@@ -35,12 +25,24 @@
     "react-scripts": "3.2.0"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^5.2.5",
+    "@storybook/addon-actions": "^5.2.5",
+    "@storybook/addon-backgrounds": "^5.2.5",
+    "@storybook/addon-info": "^5.2.5",
+    "@storybook/addon-knobs": "^5.2.5",
+    "@storybook/addon-links": "^5.2.5",
+    "@storybook/addon-storyshots": "^5.2.5",
+    "@storybook/addons": "^5.2.5",
+    "@storybook/react": "^5.2.5",
+    "@storybook/theming": "^5.2.5",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^1.7.0"
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "react-test-renderer": "^16.11.0",
+    "require-context.macro": "^1.2.2"
   },
   "eslintConfig": {
     "extends": "react-app"
