--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js src/components/**/*.js",
     "storybook": "start-storybook -p 9009 -s public",
@@ -35,7 +35,7 @@
     "react-google-autocomplete": "^1.1.2",
     "react-google-places-autocomplete": "^1.5.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.2.0",
     "react-typed": "^1.2.0"
   },
   "devDependencies": {
