--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,16 @@
   },
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.16",
+    "@storybook/addon-a11y": "^5.2.5",
+    "@storybook/addon-actions": "^5.2.5",
+    "@storybook/addon-backgrounds": "^5.2.5",
+    "@storybook/addon-info": "^5.2.5",
+    "@storybook/addon-knobs": "^5.2.5",
+    "@storybook/addon-links": "^5.2.5",
+    "@storybook/addon-storyshots": "^5.2.5",
+    "@storybook/addons": "^5.2.5",
+    "@storybook/react": "^5.2.5",
+    "@storybook/theming": "^5.2.5",
     "bootstrap": "^4.3.1",
     "google-maps-stub": "^1.0.1",
     "graphql": "^14.5.8",
@@ -27,17 +37,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-typed": "^1.2.0",
-    "require-context.macro": "^1.2.2",
-    "@storybook/addon-a11y": "^5.2.5",
-    "@storybook/addon-actions": "^5.2.5",
-    "@storybook/addon-backgrounds": "^5.2.5",
-    "@storybook/addon-info": "^5.2.5",
-    "@storybook/addon-knobs": "^5.2.5",
-    "@storybook/addon-links": "^5.2.5",
-    "@storybook/addon-storyshots": "^5.2.5",
-    "@storybook/addons": "^5.2.5",
-    "@storybook/react": "^5.2.5",
-    "@storybook/theming": "^5.2.5"
+    "require-context.macro": "^1.2.2"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
