--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,18 @@ jobs:
       - checkout
       - run: cd client && yarn
       - run: cd client && yarn test
+
+  Server:
+    docker:
+      - image: circleci/node:10.16.0
+
+    steps:
+      - checkout
+      - run: cd client && yarn
+      - run: cd client && yarn test
 workflows:
   version: 2
   Build and Test:
     jobs:
       - Client
+      - Server
