--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@storybook/react": "^5.2.5",
     "@storybook/theming": "^5.2.5",
     "bootstrap": "^4.3.1",
+    "city-timezones": "^1.1.0",
     "google-maps-stub": "^1.0.1",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
@@ -39,7 +40,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-typed": "^1.2.0",
-    "require-context.macro": "^1.2.2"
+    "require-context.macro": "^1.2.2",
+    "spacetime": "^6.3.0"
   },
   "devDependencies": {
     "enzyme": "^3.10.0",
