#92 Time for hardcoded cities

--- a/client/package.json
+++ b/client/package.json
@@ -40,8 +40,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-typed": "^1.2.0",
-    "require-context.macro": "^1.2.2",
-    "spacetime": "^6.3.0"
+    "require-context.macro": "^1.2.2"
   },
   "devDependencies": {
     "enzyme": "^3.10.0",
