--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -16,6 +16,8 @@
         "react/require-default-props": "off",
         "import/no-unresolved": "off",
         "object-curly-newline": "off",
-        "no-undef": "off"
+        "no-undef": "off",
+        "import/no-dynamic-require": "off",
+        "global-require": "off"
     }
 }
