#91 fixed linting errors from master

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -18,6 +18,8 @@
         "object-curly-newline": "off",
         "no-undef": "off",
         "import/no-dynamic-require": "off",
-        "global-require": "off"
+        "global-require": "off",
+        "no-mixed-spaces-and-tabs": "off",
+        "no-useless-escape": "off"
     }
 }
