#62 linting, added CSS to rate calculator

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -21,6 +21,12 @@
         "global-require": "off",
         "no-mixed-spaces-and-tabs": "off",
         "no-useless-escape": "off",
-        "no-restricted-globals": "off"
+        "no-restricted-globals": "off",
+        "no-unused-expressions": ["error", {
+            "allowShortCircuit": true,
+            "allowTernary": true,
+            "allowTaggedTemplates": true
+        }],
+        "max-len": "off"
     }
 }
