--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/MikeSmvl/travelingstrategy#readme",
   "dependencies": {
     "chai": "^4.2.0",
+    "city-timezones": "^1.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "easygraphql-tester": "^5.1.6",
