--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
+    "nodemailer": "^6.4.2",
     "sqlite3": "^4.1.0",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.2.1"
