--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-date-picker": "^7.10.0",
     "react-dom": "^16.11.0",
     "react-google-autocomplete": "^1.1.2",
     "react-google-places-autocomplete": "^1.5.3",
