#209 #19 added form validation functions for email and passwords, onSubmit function, fixed linting

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -27,6 +27,8 @@
             "allowTernary": true,
             "allowTaggedTemplates": true
         }],
-        "max-len": "off"
+        "max-len": "off",
+        "jsx-a11y/label-has-associated-control": "off",
+        "jsx-a11y/control-has-associated-label": "off"
     }
 }
