--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "REACT_APP_BACKEND=http://localhost:4000/graphql react-scripts start",
-    "start-windows": "($env:REACT_APP_BACKEND = 'http://localhost:4000/graphql') -and (react-scripts start)",
+    "start-windows": "($env:REACT_APP_BACKEND = \"http://localhost:4000/graphql\") && (react-scripts start)",
     "build": "REACT_APP_BACKEND=https://travelingstrategy.com/graphql react-scripts build",
     "test": "react-scripts test --coverage",
     "eject": "react-scripts eject",
