--- a/server/package.json
+++ b/server/package.json
@@ -29,9 +29,11 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
+    "ioredis": "^4.14.1",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.4.2",
     "sqlite3": "^4.1.0",
+    "uuid": "^3.4.0",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.2.1"
   },
