--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "predicthq": "^0.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
+    "react-animated-weather": "^4.0.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-bootstrap-sweetalert": "^5.1.9",
     "react-date-picker": "^7.10.0",
