--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "react-google-autocomplete": "^1.1.2",
     "react-google-places-autocomplete": "^1.5.3",
     "react-media": "^1.10.0",
+    "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-typed": "^1.2.0",
