--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "graphql-tag": "^2.10.1",
     "less": "^3.10.3",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "predicthq": "^0.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
@@ -43,7 +44,6 @@
     "react-google-autocomplete": "^1.1.2",
     "react-google-places-autocomplete": "^1.5.3",
     "react-media": "^1.10.0",
-    "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-typed": "^1.2.0",
