--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "@storybook/react": "^5.2.5",
     "@storybook/theming": "^5.2.5",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.3",
     "google-maps-stub": "^1.0.1",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
@@ -39,6 +40,7 @@
     "react-animated-weather": "^4.0.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-bootstrap-sweetalert": "^5.1.9",
+    "react-chartjs-2": "^2.9.0",
     "react-date-picker": "^7.10.0",
     "react-dom": "^16.11.0",
     "react-google-autocomplete": "^1.1.2",
