#287 changed the subscribe button.

--- a/client/package.json
+++ b/client/package.json
@@ -32,9 +32,11 @@
     "graphql-tag": "^2.10.1",
     "less": "^3.10.3",
     "lodash": "^4.17.15",
+    "node-sass": "^4.13.1",
     "predicthq": "^0.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
+    "react-awesome-button": "^6.5.1",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-bootstrap-sweetalert": "^5.1.9",
     "react-date-picker": "^7.10.0",
