--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-bootstrap-sweetalert": "^5.1.9",
+    "react-countup": "^4.3.3",
     "react-date-picker": "^7.10.0",
     "react-dom": "^16.11.0",
     "react-google-autocomplete": "^1.1.2",
