--- a/client/package.json
+++ b/client/package.json
@@ -48,11 +48,11 @@
     "react-scripts": "3.2.0",
     "react-typed": "^1.2.0",
     "require-context.macro": "^1.2.2",
-    "unsplash-js": "^6.0.0"
+    "unsplash-js": "^6.0.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1"
   },
   "devDependencies": {
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
