--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "react-media": "^1.10.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-table-6": "^6.11.0",
     "react-typed": "^1.2.0",
     "require-context.macro": "^1.2.2"
   },
