--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-bootstrap-sweetalert": "^5.1.9",
     "react-chartjs-2": "^2.9.0",
+    "react-collapsible": "^2.7.0",
     "react-date-picker": "^7.10.0",
     "react-dom": "^16.11.0",
     "react-google-autocomplete": "^1.1.2",
