--- a/client/package.json
+++ b/client/package.json
@@ -28,17 +28,19 @@
     "@storybook/theming": "^5.2.5",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.9.3",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "google-maps-stub": "^1.0.1",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "less": "^3.10.3",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "node-sass": "^4.13.1",
     "predicthq": "^0.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-animated-weather": "^4.0.0",
-    "node-sass": "^4.13.1",
     "react-awesome-button": "^6.5.1",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-bootstrap-sweetalert": "^5.1.9",
@@ -55,9 +57,7 @@
     "react-table-6": "^6.11.0",
     "react-typed": "^1.2.0",
     "require-context.macro": "^1.2.2",
-    "unsplash-js": "^6.0.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1"
+    "unsplash-js": "^6.0.0"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
