--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "REACT_APP_BACKEND=http://localhost:4000/ react-scripts start",
-    "start-windows": "set \"REACT_APP_BACKEND=http://localhost:4000/\" && react-scripts start",
+    "start-windows": "react-scripts start",
     "build": "REACT_APP_BACKEND=https://travelingstrategy.com/ react-scripts build",
     "test": "react-scripts test --coverage",
     "eject": "react-scripts eject",
