--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -14,9 +14,12 @@
         "react/jsx-props-no-spreading": "off",
         "no-unused-vars": "off",
         "react/require-default-props": "off",
+        "react/no-array-index-key": "off",
         "import/no-unresolved": "off",
         "object-curly-newline": "off",
         "no-undef": "off",
+        "array-callback-return": "off",
+        "consistent-return": "off",
         "import/no-dynamic-require": "off",
         "global-require": "off",
         "no-mixed-spaces-and-tabs": "off",
